# ai-dev-tools-zoomcamp-03-assignment

./: .gitignore  README.md  main.py  process_markdown.py  pyproject.toml  requirements.txt  test.py
.github/: copilot-instructions.md
src/jina_reader_tool/: __init__.py  reader.py  server.py
src/md_reader_tool/: __init__.py  reader.py  search.py  server.py
src/md_reader_tool/data/: fastmcp-main-cache.json
